# codevisual

./: .gitignore  .travis.yml  CNAME  Cargo.toml  README.md  build.rs  codevisual-demo.js  codevisual_demo.wasm  index.html  make-tutorial.sh  make-web.bat  make-web.sh  make-windows.sh  make.bat  make.sh  search-index.js  stats.sh  sync.sh
.cargo/: config
codevisual/: Asset.t.html  AssetHandle.t.html  Cargo.toml  Game.t.html  ResourceContainer.t.html  ResourceFuture.t.html  ResourceLoader.t.html  Setting.t.html  ShaderDefine.t.html  ShaderPrelude.t.html  SingleShaderDefine.t.html  compile_ugli_program.v.html  defines.m.html  enum.CursorType.html  enum.Event.html  enum.Key.html  enum.MouseButton.html  enum.Setting.html  fn.compile_ugli_program.html  fn.run.html  index.html  macro.defines.html  macro.impl_shader_library!.html  macro.impl_shader_library.html  sidebar-items.js  struct.App.html  struct.AssetHandle.html  struct.Font.html  struct.Material.html  struct.PreprocessedShader.html  struct.ResourceJob.html  struct.ResourceLoader.html  struct.ShaderPrelude.html  struct.SingleShaderDefine.html  struct.Sound.html  struct.TouchPoint.html  struct.Window.html  trait.Asset.html  trait.Game.html  trait.Resource.html  (+6 more)
codevisual-demo/: Cargo.toml
codevisual-demo/src/: main.rs  program.glsl
codevisual-demo/static/: index.html
codevisual/app/: fn.run.html
codevisual/examples/: events.rs  triangle.rs
codevisual/examples/playground/src/: main.rs  settings.rs
codevisual/examples/playground/static/: index.html
codevisual/examples/tutorial/: 01-hello.rs  02-triangle.rs  03-events.rs
codevisual/font/: struct.Font.html
codevisual/material/: fn.compile_ugli_program.html  struct.Material.html
codevisual/material/defines/: ShaderDefineStorage.t.html  struct.SingleShaderDefine.html  trait.ShaderDefine.html  trait.ShaderDefineStorage.html
codevisual/resources/: ResourceJob.t.html  struct.AssetHandle.html  struct.ResourceJob.html  struct.ResourceLoader.html  trait.Asset.html  trait.Resource.html  trait.ResourceContainer.html  trait.ResourceFuture.html
codevisual/settings/: enum.Setting.html  trait.Settings.html
codevisual/sound/implementation/: struct.Sound.html
codevisual/src/: app.rs  context.rs  debug_overlay.rs  game.rs  lib.rs  settings.rs
codevisual/src/asset/: fs.rs  http.rs  mod.rs  simple.rs
codevisual/src/core/: mod.rs  settings.rs
codevisual/src/core/font/: mod.rs  shader.glsl
codevisual/src/font/: fragment.glsl  mod.rs  shader.glsl  vertex.glsl
codevisual/src/material/: defines.rs  library.rs  mod.rs
codevisual/src/resources/: mod.rs  text.rs  texture.rs
codevisual/src/shader_lib/: mod.rs
codevisual/src/sound/: impl_emscripten.rs  impl_not_emscripten.rs  mod.rs
codevisual/src/window/: cursor.rs  mod.rs
codevisual/window/: struct.Window.html
codevisual/window/cursor/: enum.CursorType.html
codevisual/window/events/: enum.Event.html
codewars2017/: Cargo.toml  make-web-debug.bat  make-web.bat  make-web.sh  sync.bat
codewars2017/src/: fullscreen_texture.glsl  lib.glsl  main.rs  material.rs  settings.rs  shader.glsl
codewars2017/src/blur/: mod.rs  shader.glsl
codewars2017/src/camera/: lib.glsl  mod.rs
codewars2017/src/effects/: mod.rs  particle.glsl  shader.glsl
codewars2017/src/facilities/: mod.rs  shader.glsl
codewars2017/src/game_log/: Cargo.toml
codewars2017/src/game_map/: mod.rs  shader.glsl  shader_weather.glsl
codewars2017/src/gamelog/: Cargo.toml  mod.rs
codewars2017/src/minimap/: background.glsl  bound.glsl  mod.rs  vehicle.glsl
codewars2017/src/shadow_map/: lib.glsl  mod.rs  shadow_material.glsl  trees.glsl  vehicle.glsl
codewars2017/src/skybox/: mod.rs  shader.glsl
codewars2017/src/terrain/: mod.rs  rain.glsl  shader.glsl
codewars2017/src/vehicles/: mod.rs  shader.glsl
codewars2017/src/web/: Cargo.toml  build.rs
codewars2017/static/: game_first_only.json  game_tick_with_effects.json  game_tick_with_order.json  index.html
src/core/: Cargo.toml  mod.rs  profiler.rs  settings.rs
src/core/derive/: Cargo.toml
src/core/material/: Cargo.toml  defines.rs  mod.rs
src/core/resources/: mod.rs  text.rs  texture.rs
src/core/sound/: impl_emscripten.rs  mod.rs
src/core/src/: events.rs  lib.rs  profiler.rs  settings.rs
src/core/window/: Cargo.toml  mod.rs
ugli/: Cargo.toml  DepthComponent.t.html  DrawMode.t.html  Uniform.t.html  VertexAttribute.t.html  enum.AttributeType.html  enum.BlendMode.html  enum.ColorAttachment.html  enum.ColorAttachmentRead.html  enum.CullFace.html  enum.DepthAttachment.html  enum.DepthAttachmentRead.html  enum.DepthFunc.html  enum.DrawMode.html  enum.Filter.html  enum.ShaderType.html  enum.WrapMode.html  fn.clear.html  fn.draw.html  fn.instanced.html  index.html  macro.uniforms.html  struct.AttributeInfo.html  struct.ColorData.html  struct.Context.html  struct.DepthComponent.html  struct.DrawParameters.html  struct.Framebuffer.html  struct.FramebufferRead.html  struct.InstancedVertexDataSource.html  struct.Program.html  struct.Renderbuffer.html  struct.Shader.html  struct.SingleUniform.html  struct.Texture.html  struct.UniformInfo.html  struct.VertexBuffer.html  struct.VertexBufferSlice.html  trait.IntoVertexBufferSlice.html  trait.Pixel.html  (+10 more)
ugli/draw/: enum.DrawMode.html  fn.clear.html
ugli/draw/parameters/: DepthFunc.t.html  struct.DrawParameters.html
ugli/framebuffer/: FramebufferRead.t.html  enum.ColorAttachmentRead.html  enum.DepthAttachment.html
ugli/framebuffer/read/: ColorData.t.html
ugli/program/: struct.AttributeInfo.html  struct.Program.html
ugli/renderbuffer/: struct.Renderbuffer.html
ugli/shader/: enum.ShaderType.html  struct.Shader.html
ugli/src/: context.rs  lib.rs  program.rs  quad.rs  shader.rs
ugli/src/draw/: mod.rs  parameters.rs
ugli/src/framebuffer/: fbo.rs  mod.rs  read.rs
ugli/src/renderbuffer/: mod.rs
ugli/src/texture/: mod.rs
ugli/src/uniform/: mod.rs  storage.rs
ugli/src/vertex/: attribute.rs  buffer.rs  mod.rs
ugli/texture/: enum.WrapMode.html
ugli/vertex/: VertexAttributeVisitor.t.html  trait.VertexDataVisitor.html
(+19264 files in other folders)
