[package]
name = "codevisual"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]

[dependencies]
prelude = { path = "prelude" }
ugli = { path = "ugli" }
codevisual_derive = { path = "derive" }
serde = "1.0"
serde_derive = "1.0"
lazy_static = "*"

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
image = "*"
glutin = "*"

[target.'cfg(target_os = "emscripten")'.dependencies]
brijs = { path = "brijs" }
codevisual_web = { path = "src/web" }

[[example]]
name = "playground"
path = "examples/playground/src/main.rs"

[[example]]
name = "tutorial-01"
path = "examples/tutorial/01-hello.rs"

[[example]]
name = "tutorial-02"
path = "examples/tutorial/02-triangle.rs"

[[example]]
name = "tutorial-03"
path = "examples/tutorial/03-events.rs"

[[bin]]
name = "doc"
path = "scripts/doc.rs"
doc = false