[package]
name = "codevisual"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]

[dependencies]
prelude = { git = "https://github.com/kuviman/commons" }
ugli = { git = "https://github.com/kuviman/ugli" }
codevisual-derive = { path = "../codevisual-derive" }
rusttype = "0.3.0"
serde = "1.0"
lazy_static = "1.0"

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
image = "0.18.0"
glutin = "0.11.0"
threadpool = "1.7"
num_cpus = "1.0"
rodio = "0.5.2"

[target.'cfg(target_os = "emscripten")'.dependencies]
webby = { git = "https://github.com/kuviman/webby" }
