[package]
name = "codevisual"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]

[dependencies]
prelude = { git = "https://github.com/kuviman/commons" }
ugli = { git = "https://github.com/kuviman/ugli" }
rusttype = "0.3.0"
serde = "1.0"
lazy_static = "1.0"
# TODO: cfg this dependency https://github.com/koute/cargo-web/issues/72
stdweb = "0.4.0"

[target.'cfg(not(any(target_arch = "asmjs", target_arch = "wasm32")))'.dependencies]
image = "0.18.0"
glutin = "0.11.0"
threadpool = "1.7"
num_cpus = "1.0"
rodio = "0.5.2"

[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten = { git = "https://github.com/kuviman/emscripten" }