[package]
name = "codevisual"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]

[dependencies]
prelude = { git = "https://github.com/kuviman/commons" }
geom = { git = "https://github.com/kuviman/commons" }
color = { git = "https://github.com/kuviman/commons" }
timer = { git = "https://github.com/kuviman/commons" }
ugli = { git = "https://github.com/kuviman/ugli" }
rusttype = { version = "0.5", features = [ "gpu_cache" ] }
serde = "1"
lazy_static = "1"
failure = "0.1"

# TODO: cfg this dependency https://github.com/koute/cargo-web/issues/72
stdweb = "0.4"

[target.'cfg(not(any(target_arch = "asmjs", target_arch = "wasm32")))'.dependencies]
image = "0.19"
glutin = "0.15"
threadpool = "1"
num_cpus = "1"
rodio = "0.7"