[package]
name = "codewars2017"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]

[dependencies]
codevisual = { path = ".." }
codewars2017_log = { path = "src/gamelog" }

[target.'cfg(target_os = "emscripten")'.dependencies]
brijs = { path = "../src/brijs" }
codewars2017_web = { path = "src/web" }