[package]
name = "codevisual_core"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]

[dependencies]
gl = "*"
lazy_static = "*"

codevisual_commons = { path = "../commons" }
codevisual_derive = { path = "derive" }

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
glutin = "*"
image = "*"

[target.'cfg(target_os = "emscripten")'.dependencies]
brijs = { path = "../brijs" }
codevisual_core_html = { path = "web/html" }
codevisual_core_css = { path = "web/css" }
codevisual_core_js = { path = "web/js" }