[package]
name = "codevisual_core"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
prelude = { path = "../prelude" }
ugli = { path = "../ugli" }
codevisual_window = { path = "window" }
codevisual_material = { path = "material" }
codevisual_derive = { path = "derive" }

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
image = "*"

[target.'cfg(target_os = "emscripten")'.dependencies]
brijs = { path = "../brijs" }
codevisual_core_html = { path = "web/html" }
codevisual_core_css = { path = "web/css" }
codevisual_core_js = { path = "web/js" }