[package]
name = "codevisual_window"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]

[dependencies]
vpl = { path = "../../vpl" }
ugli = { path = "../../ugli" }
lazy_static = "*"

[target.'cfg(target_os = "emscripten")'.dependencies]
brijs = { path = "../../brijs" }

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
glutin = "*"